tests/baselines/reference/structAndInterfaceWithSameName.errors.txt
tests/cases/conformance/structs/structDeclarations/structAndInterfaceWithSameName.ts(1,8): error TS2300: Duplicate identifier 'C'.
tests/cases/conformance/structs/structDeclarations/structAndInterfaceWithSameName.ts(2,11): error TS2300: Duplicate identifier 'C'.
tests/cases/conformance/structs/structDeclarations/structAndInterfaceWithSameName.ts(5,12): error TS2300: Duplicate identifier 'D'.
tests/cases/conformance/structs/structDeclarations/structAndInterfaceWithSameName.ts(9,15): error TS2300: Duplicate identifier 'D'.


==== tests/cases/conformance/structs/structDeclarations/structAndInterfaceWithSameName.ts (4 errors) ====
    struct C { foo: string; }
           ~
!!! error TS2300: Duplicate identifier 'C'.
    interface C { foo: string; } // error
              ~
!!! error TS2300: Duplicate identifier 'C'.
    
    module M {
        struct D {
               ~
!!! error TS2300: Duplicate identifier 'D'.
            bar: string;
        }
    
        interface D { // error
                  ~
!!! error TS2300: Duplicate identifier 'D'.
            bar: string;
        }
    }